content pass 1 - updated fonts, fleshed out some text, fixed navbar to be centered even when wrapping

--- a/kyleandemily/wedding/static/wedding/css/wedding.css
+++ b/kyleandemily/wedding/static/wedding/css/wedding.css
@@ -7,7 +7,7 @@
 }
 
 #textHeader {
-    font-family: "Tangerine",Arial, Helvetica, sans-serif;
+    font-family: 'Allura',Arial, Helvetica, sans-serif;
     color: #aaa;
 }
 
